Docs: record viewer flicker/zoom fix, rewrite README for release
CLAUDE.md: adds the 3D viewer flicker/rotation/zoom investigation writeup
(supersedes the earlier, never-root-caused "flicker" section) alongside
the code fix in the previous commits.

README.md: drops the stale nvie.com git-flow branching description
(develop/stable/master no longer exist as active branches -- everything
was consolidated into main) and the outdated PNNL-era feature list in
favor of a summary of this fork's modernization work, current build
target (Debian 13/CMake/CPack), and a pointer to GETTING_STARTED.md for
install steps, ahead of a first alpha/beta release.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>